[package]
name = "crypto_pals"
version = "0.1.0"
authors = ["Neel Kuila <neelk1123@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.9.0"
hex = "0.3.1"
rand = "0.6.5"
real_mt = {version="1.1.1", package="mersenne_twister"}
chrono = "0.4.6"
byteorder = "1.3.1"

[[bin]]
name = "s3c22"
path = "src/s3c22.rs"

[[bin]]
name = "s3c23"
path = "src/s3c23.rs"

[[bin]]
name = "s3c24"
path = "src/s3c24.rs"

